# nicole

./: .clangd  .gitignore  CMakeLists.txt  CMakeLists2.txt  CMakePresets.json  CMakeUserPresets.json  README.md  a.out  compile_commands.json  config.json  literals  settings.json  updateIntellisense.sh
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  ConfigureLLVM.cmake  CplusplusStandarAndLTO.cmake  EnableCoverage.cmake  FetchCatch2.cmake  FindCcache.cmake  FindClangTidy.cmake  FindCommonSourceFiles.cmake  FindCompiler.cmake  FindCppcheck.cmake  FindTestSourceFiles.cmake  RunningAction.cmake  Version.cmake
dockerInstall/: Dockerfile
docs/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
docs/inc/: errors.h.func-c.html  errors.h.func.html  errors.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/inc/compiler/: compiler.h.func-c.html  compiler.h.func.html  compiler.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  jitEngine.h.func-c.html  jitEngine.h.func.html  jitEngine.h.gcov.html  linker.h.func-c.html  linker.h.func.html  linker.h.gcov.html  nicole.h.func-c.html  nicole.h.func.html  nicole.h.gcov.html  optimizer.h.func-c.html  optimizer.h.func.html  optimizer.h.gcov.html
docs/inc/lexicalAnalysis/: category.h.func-c.html  category.h.func.html  category.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  lexer.h.func-c.html  lexer.h.func.html  lexer.h.gcov.html  location.h.func-c.html  location.h.func.html  location.h.gcov.html  nicoleSintax.h.func-c.html  nicoleSintax.h.func.html  nicoleSintax.h.gcov.html  regexWrapper.h.func-c.html  regexWrapper.h.func.html  regexWrapper.h.gcov.html  sintax.h.func-c.html  sintax.h.func.html  sintax.h.gcov.html  sourceLocation.h.func-c.html  sourceLocation.h.func.html  sourceLocation.h.gcov.html  (+6 more)
examples/: aa.nc  b.nc  c.nc  d.nc  destructor.nc  e.nc  funcStr.nc  funcstr3.nc  ptr.nc  ptr2.nc  ptr3.nc  super.nc  syntax.nc  video.nc
examples/codeGen/: assigment.nc  import.nc
examples/performance/: a.cc  a.js  a.py  a.rs  nestedLoops.nc  nestedLoops2.nc  tiempos.py
inc/: errors.h
inc/compiler/: compiler.h  jitEngine.h  linker.h  nicole.h  optimizer.h  targetGenerator.h
inc/lexicalAnalysis/: category.h  lexer.h  location.h  nicoleSintax.h  regexWrapper.h  sintax.h  sourceLocation.h  token.h  tokenStream.h  type.h
inc/options/: options.h  optionsParser.h
inc/parsingAnalysis/: builder.h  builder3.h  checkPosition.h
inc/tables/: symbol.h
inc/utils/: nameMangler.h
inc/visitors/: visitor.h
scripts/: nicole.sh  nicoleCompile.sh  nicoleCompileAndRun.sh
src/: main.cc
src/compiler/: jitEngine.cc  linker.cc  nicole.cc  optimizer.cc  targetGenerator.cc
src/lexicalAnalysis/: lexer.cc  nicoleSintax.cc  tokenStream.cc  type.cc
src/options/: optionsParser.cc
src/parsingAnalysis/: builder.cc  checkPosition.cc
src/utils/: nameMangler.cc
stl/: algorithms.nc
test/lexicalAnalysis/: test_lexer.cc
test/options/: test_options.cc  test_optionsParser.cc
version/: version.h.in
vscode-nicole/: language-configuration.json  package.json
vscode-nicole/syntaxes/: nicole.tmLanguage.json
(+1061 files in other folders)
